--- a/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_02/PRODIGY_DS_02.ipynb
+++ b/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_02/PRODIGY_DS_02.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "## Name - Reshma oleti\n",
-    "## LinkedIN - www.linkedin.com/reshmaoleti\n"
+    "## LinkedIn - www.linkedin.com/in/reshmaoleti\n"
    ]
   },
   {
