Update Decision Tree Classifier.ipynb

--- a/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_03/Decision Tree Classifier.ipynb
+++ b/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_03/Decision Tree Classifier.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "source": [
     "### Name - Reshma oleti\n",
-    "### LinkedIN - www.linkedin.com/reshmaoleti\n",
+    "### LinkedIn - www.linkedin.com/in/reshmaoleti\n",
     "\n",
     "### Prodigy InfoTech Internship: Task 3\n",
     "#### Build a decision tree classifier to predict whether a customer will purchase a product or service based on their demographic and behavioral data. Use a dataset such as the Bank Marketing dataset deom the UCI Machine Learning Repository.\n",
