--- a/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_04/Twitter Sentiment Analysis.ipynb
+++ b/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_04/Twitter Sentiment Analysis.ipynb
@@ -13,7 +13,7 @@
     "## X (Prev. Twitter) Sentiment Patterns Analysis Using Python\n",
     "\n",
     "### Name - Reshma oleti\n",
-    "### LinkedIN - www.linkedin.com/in/reshmaoleti\n",
+    "### LinkedIn - www.linkedin.com/in/reshmaoleti\n",
     "\n",
     "### Prodigy InfoTech Internship: Task 4\n",
     "#### Analyze and visualize sentiment patterns in social media data to understand public opinion and attitudes towards specific topics or brands.\n",
