--- a/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_05/US Accidents Data Analysis.ipynb
+++ b/Prodigy InfoTech Data Science Internship All Tasks/PRODIGY_DS_05/US Accidents Data Analysis.ipynb
@@ -23,7 +23,7 @@
     "## US Accidents Data Analysis\n",
     "\n",
     "### Name - Reshma oleti\n",
-    "### LinkedIN - www.linkedin.com/in/reshmaoleti\n",
+    "### LinkedIn - www.linkedin.com/in/reshmaoleti\n",
     "\n",
     "### Prodigy InfoTech Internship: Task 5\n",
     "#### Analyze traffic accident data to identify patters realated to road conditions, weather and time of day. Visualize accident hotspots and contributing factors.\n",
